--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Country Select</title><link rel="stylesheet" href="/index.5025b210.css"></head><body> <div id="app"></div> <script type="module" src="/index.f04c9b15.js"></script> </body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Country Select</title><link rel="stylesheet" href="/rescript-country-select/index.5025b210.css"></head><body> <div id="app"></div> <script type="module" src="/rescript-country-select/index.f04c9b15.js"></script> </body></html>
