--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Country Select</title><link rel="stylesheet" href="/index.cf4043c6.css"></head><body> <div id="app"></div> <script type="module" src="/index.2c2a63c7.js"></script> </body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Country Select</title><link rel="stylesheet" href="/rescript-country-select/index.cf4043c6.css"></head><body> <div id="app"></div> <script type="module" src="/rescript-country-select/index.2c2a63c7.js"></script> </body></html>
